Change DictionaryValue* param in ExternalProviderImpl to unique_ptr.

Change ExternalProviderImpl::Set/UpdatePrefs' params from
DictionaryValue* to unique_ptr.
ExternalProviderImpl::UpdatePrefs had a leak because of this, because
there's an early out in that function.

Bug: 757244
Test: Internal change only.
Change-Id: I25c57f341adc0a01fc0579066f38ef2a6b494cb0
Reviewed-on: https://chromium-review.googlesource.com/621233
Commit-Queue: Istiaque Ahmed <lazyboy@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#495844}
Former-commit-id: a7431b371c87b1ee42ae4abfb8ef8999dc27f0ef