chrome/browser/extensions/external_loader.cc
@@ -41,7 +41,7 @@ ExternalLoader::~ExternalLoader() {}
 void ExternalLoader::LoadFinished() {
   CHECK(BrowserThread::CurrentlyOn(BrowserThread::UI));
   if (owner_) {
-    owner_->SetPrefs(prefs_.release());
+    owner_->SetPrefs(std::move(prefs_));
   }
 }
 
@@ -49,7 +49,7 @@ void ExternalLoader::OnUpdated(
     std::unique_ptr<base::DictionaryValue> updated_prefs) {
   CHECK(BrowserThread::CurrentlyOn(BrowserThread::UI));
   if (owner_)
-    owner_->UpdatePrefs(updated_prefs.release());
+    owner_->UpdatePrefs(std::move(updated_prefs));
 }
 
 }  // namespace extensions
